methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: not found: value estSurBiscuits
  if(estSurBiscuits){
     ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estSurBiscuits){
                    ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estSurBiscuits){
  ^